web/api: use query params for GET requests
